# conjugate-gradient-pyopencl

./: .gitignore  CMakeLists.txt  cl.py  clcg.c  clcg.h  helmFE_var.py  main.c  p_h-PY_C-CL-multi-GPU.py  p_h-PY_C-CL.py  p_helmholtz.py
kernel/complex/: axpy.cl  aypx.cl  cmplx.h  spmv.cl  sub.cl  vdot.cl
kernel/real/: aypx.cl  sub.cl  vdot.cl
opencl-solver/: CMakeLists.txt  README.md  clcg.c  clcg.h  main.c
opencl-solver/kernel/real/: axpy.cl  spmv.cl
opencl-solver/test-matrices/: helm.mtx
